RESOLVED FIXED191039
[Apple Pay] PaymentRequest.canMakePayment() should resolve to true whenever Apple Pay is available
https://bugs.webkit.org/show_bug.cgi?id=191039
Summary [Apple Pay] PaymentRequest.canMakePayment() should resolve to true whenever A...
Andy Estes
Reported 2018-10-29 13:10:44 PDT
[Apple Pay] PaymentRequest.canMakePayment() should resolve to true whenever Apple Pay is available
Attachments
Patch (9.08 KB, patch)
2018-10-29 13:16 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2018-10-29 13:16:18 PDT
Andy Estes
Comment 2 2018-10-29 15:31:30 PDT
WebKit Commit Bot
Comment 3 2018-10-30 11:12:28 PDT
Comment on attachment 353314 [details] Patch Clearing flags on attachment: 353314 Committed r237594: <https://trac.webkit.org/changeset/237594>
WebKit Commit Bot
Comment 4 2018-10-30 11:12:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.